--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
     "@swimlane/ngx-datatable": "^11.1.7",
+    "@types/googlemaps": "^3.30.7",
     "angular-notice": "^1.0.0",
     "angular2-text-mask": "^8.0.4",
-    "esri-loader": "^2.0.0"
+    "core-js": "^2.4.1",
+    "esri-loader": "^2.0.0",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.6.7",
