--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/googlemaps": "^3.30.7",
     "angular-notice": "^1.0.0",
     "angular2-text-mask": "^8.0.4",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "esri-loader": "^2.0.0",
     "rxjs": "^5.5.6",
@@ -34,6 +35,7 @@
     "@angular/cli": "1.6.7",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/chartjs": "0.0.31",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
