--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular2-text-mask": "^8.0.4",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "esri-leaflet": "^2.1.4",
     "esri-loader": "^2.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
