--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "esri-leaflet": "^2.1.4",
     "esri-loader": "^2.0.0",
+    "exif-js": "^2.3.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
