--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ngui/auto-complete": "^1.0.2",
     "@swimlane/ngx-datatable": "^11.1.7",
     "@types/googlemaps": "^3.30.7",
     "angular-notice": "^1.0.0",
