save changes to cloud

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@swimlane/ngx-datatable": "^11.1.7",
     "@types/googlemaps": "^3.30.7",
     "@types/leaflet": "^1.2.7",
+    "angular-draggable-droppable": "^3.0.1",
     "angular-notice": "^1.0.0",
     "angular2-text-mask": "^8.0.4",
     "chart.js": "^2.7.1",
