--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/leaflet": "^1.2.7",
     "angular-draggable-droppable": "^3.0.1",
     "angular-notice": "^1.0.0",
+    "angular2-draggable": "^2.0.0-beta.2",
     "angular2-text-mask": "^8.0.4",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
