--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "exif-js": "^2.3.0",
     "logrocket": "^1.0.0",
     "rxjs": "^5.5.6",
+    "signature_pad": "^3.0.0-beta.3",
+    "socket.io": "^2.2.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
